# psim

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  TODO  setup-pycc.sh
include/: bwalloc.h  config.h  constants.h  context.h  gconfig.h  gcontext.h  loadbalancer.h  matplotlibcpp.h  network.h  options.h  prio.h  protocol.h  protocol_builder.h  psim.h  traffic_gen.h
include/scheduler/: scheduler.h
input/: candle.txt  shuffle-map.txt  simple.txt  transformer128-2.txt  transformer128.txt  transformer16-2.txt  transformer16.txt  vgg-2.txt  vgg.txt  vgg128-dp.txt  vgg128.txt
input/128search/: candle128-comm+comp.txt  candle128-comm+maxmem.txt  candle128-comm+mem.txt  candle128-comm.txt  candle128-comp.txt  candle128-maxmem.txt  candle128-mem+penalty.txt  candle128-penalty.txt  candle128-random.txt  candle128-sim+penalty.txt  candle128-simtime.txt  candle128-totalmem.txt  transformer128-comm+comp.txt  transformer128-comm+maxmem.txt  transformer128-comm+mem.txt  transformer128-comm.txt  transformer128-comp.txt  transformer128-maxmem.txt  transformer128-mem+penalty.txt  transformer128-penalty.txt  transformer128-random.txt  transformer128-sim+penalty.txt  transformer128-simtime.txt  transformer128-totalmem.txt  vgg128-comm+comp.txt  vgg128-comm+maxmem.txt  vgg128-comm+mem.txt  vgg128-comm.txt  vgg128-comp.txt  vgg128-maxmem.txt  vgg128-mem+penalty.txt  vgg128-penalty.txt  vgg128-random.txt  vgg128-sim+penalty.txt  vgg128-simtime.txt  vgg128-totalmem.txt
input/128search-dpstart-2/: candle128-comm+compute.txt  candle128-comm+maxmem+mem.txt  candle128-comm+maxmem.txt  candle128-comm+mem.txt  candle128-comm.txt  candle128-random.txt  candle128-simtime+comm+maxmem+mem.txt  candle128-simtime+comm.txt  candle128-simtime+compute.txt  candle128-simtime+maxmem+mem.txt  candle128-simtime+maxmem.txt  candle128-simtime+mem.txt  transformer128-comm+compute.txt  transformer128-comm+maxmem+mem.txt  transformer128-comm+maxmem.txt  transformer128-comm+mem.txt  transformer128-comm.txt  transformer128-random.txt  transformer128-simtime+comm+maxmem+mem.txt  transformer128-simtime+comm.txt  transformer128-simtime+maxmem+mem.txt  transformer128-simtime+maxmem.txt  transformer128-simtime+mem.txt  transformer128-simtime.txt  vgg128-comm+compute.txt  vgg128-comm+maxmem+mem.txt  vgg128-comm+maxmem.txt  vgg128-comm+mem.txt  vgg128-comm.txt  vgg128-random.txt  vgg128-simtime+comm+maxmem+mem.txt  vgg128-simtime+comm.txt  vgg128-simtime+compute.txt  vgg128-simtime+maxmem+mem.txt  vgg128-simtime+maxmem.txt  vgg128-simtime+mem.txt  vgg128-simtime.txt
input/128search-dpstart-2-limited/: candle128-simtime.txt
input/shuffle/: shuffle-map.txt
playground/p1/: process.py
playground/p2/: process.py
playground/p4/: process.py
run/: Makefile  build.sh  ga.py  git_backup.sh  git_rebase.sh  plot.py  plot_cdf.py  plot_compare.py  ram_controller.sh  run-dp-periodic.py  run-large-nethint.py  run.py  run.sh  runner.py  sweep-components-jobsizes.py  sweep-components-oversub.py  sweep-dp-periodic.py  sweep-intensity.py  sweep-job-comparison.py  sweep-job-runtime.py  sweep-jobs-scale.py  sweep-jobs.py  sweep-large-nethint-1.py  sweep-large-nethint-2.py  sweep-large-nethint-LB-TS-OR.py  sweep-large-nethint-MGPU.py  sweep-large-nethint-Meta.py  sweep-large-nethint-Prof.py  sweep-large-nethint-SUB.py  sweep-large-nethint-TSD.py  sweep-large-nethint-example.py  sweep-large-nethint-example2.py  sweep-large-nethint-script-1.py  sweep-large-nethint-script-2.py  sweep-large-nethint-script-3.py  sweep-large-nethint-script-4.py  sweep-large-nethint-script-5.py  sweep-large-nethint-script-6.py  sweep-large-nethint-script-7.py  sweep-large-nethint-script-8.py  (+47 more)
src/: bwalloc.cc  context.cc  core_network.cc  fattreenetwork.cc  flow.cc  leafspinenetwork.cc  loadbalancer.cc  main.cc  network.cc  options.cc  prio.cc  protocol.cc  protocol_builder.cc  psim.cc  traffic_gen.cc
(+71 files in other folders)
